--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -275,76 +275,78 @@
 										span.okved-num A
 									
 									.okved-list__text
-										.okved-name  Сельское, Лесное Хозяйство, Охота, Рыболовство и Рыбоводство
+										.okved-name.body-3  Сельское, Лесное Хозяйство, Охота, Рыболовство и Рыбоводство
 										
 										//====иконка галочка ========
 										.okved-list__icon
 											svg.svg-down
 												use(href="./img/spriteSvg.svg#svg-down")
-									
-								//=== level 2 ========
-								ul.okved-sublist
-									li.okved-sublist__block.okved-sub-item
-										.okved-list__header.py-20
-											label.form-checkbox
-												input(type="checkbox" name="" )
-												span.fake-checkbox
-												span.okved-num 01
-											
-											.okved-list__text
-												.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-												//====иконка галочка ========
-												.okved-list__icon
-													svg.svg-down
-														use(href="./img/spriteSvg.svg#svg-down")
-									
-										//=== level 3 ========
-										ul.okved-sublist
-											li.okved-sublist__block.okved-sub-item
-												.okved-list__header.py-20
-													label.form-checkbox
-														input(type="checkbox" name="" )
-														span.fake-checkbox
-														span.okved-num 01.1
-													
-													.okved-list__text
-														.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-														//====иконка галочка ========
-														.okved-list__icon
-															svg.svg-down
-																use(href="./img/spriteSvg.svg#svg-down")
-					
-												//=== level 4 ========
-												ul.okved-sublist
-													li.okved-sublist__block.okved-sub-item
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 01.11
-															
-															.okved-list__text
-																.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																//====иконка галочка ========
-																.okved-list__icon
-																	svg.svg-down
-																		use(href="./img/spriteSvg.svg#svg-down")
+								
+								//========= Подкатегории ОКВЭД ========
+								.livel_1-drop
+									//=== level 2 ========
+									ul.okved-sublist.okved-sublist__level-2
+										li.okved-sublist__block.okved-sub-item
+											.okved-list__header.py-20
+												label.form-checkbox
+													input(type="checkbox" name="" )
+													span.fake-checkbox
+													span.okved-num 01
+												
+												.okved-list__text
+													.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
+													//====иконка галочка ========
+													.okved-list__icon
+														svg.svg-down
+															use(href="./img/spriteSvg.svg#svg-down")
+										
+											//=== level 3 ========
+											ul.okved-sublist.okved-sublist__level-3
+												li.okved-sublist__block.okved-sub-item
+													.okved-list__header.py-20
+														label.form-checkbox
+															input(type="checkbox" name="" )
+															span.fake-checkbox
+															span.okved-num 01.1
+														
+														.okved-list__text
+															.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
+															//====иконка галочка ========
+															.okved-list__icon
+																svg.svg-down
+																	use(href="./img/spriteSvg.svg#svg-down")
+						
+													//=== level 4 ========
+													ul.okved-sublist.okved-sublist__level-4
+														li.okved-sublist__block.okved-sub-item
+															.okved-list__header.py-20
+																label.form-checkbox
+																	input(type="checkbox" name="" )
+																	span.fake-checkbox
+																	span.okved-num 01.11
+																
+																.okved-list__text
+																	.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
+																	//====иконка галочка ========
+																	.okved-list__icon
+																		svg.svg-down
+																			use(href="./img/spriteSvg.svg#svg-down")
 
-														//=== level 5 ========
-														ul.okved-sublist
-															li.okved-sublist__block
-																.okved-list__header.py-20
-																	label.form-checkbox
-																		input(type="checkbox" name="" )
-																		span.fake-checkbox
-																		span.okved-num 01.11.1
-																	
-																	.okved-list__text
-																		.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																		//====иконка галочка ========
-																		.okved-list__icon
-																			svg.svg-down
-																				use(href="./img/spriteSvg.svg#svg-down")
+															//=== level 5 ========
+															ul.okved-sublist.okved-sublist__level-5
+																li.okved-sublist__block
+																	.okved-list__header.py-20
+																		label.form-checkbox
+																			input(type="checkbox" name="" )
+																			span.fake-checkbox
+																			span.okved-num 01.11.1
+																		
+																		.okved-list__text
+																			.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
+																			//====иконка галочка ========
+																			.okved-list__icon
+																				svg.svg-down
+																					use(href="./img/spriteSvg.svg#svg-down")
 
 
 							
@@ -357,32 +359,62 @@
 										span.okved-num B
 									
 									.okved-list__text.fly-center
-										.okved-name  Добыча полезных ископаемых
+										.okved-name.body-3  Добыча полезных ископаемых
 										
 										//====иконка галочка ========
 										.okved-list__icon
 											svg.svg-down
 												use(href="./img/spriteSvg.svg#svg-down")
-					
-								//=== level 2 ========
-								ul.okved-sublist
-									li.okved-sublist__block
-										.okved-list__header.py-20
-											label.form-checkbox
-												input(type="checkbox" name="" )
-												span.fake-checkbox
-												span.okved-num 01
-											
-											.okved-list__header
-												.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-											//====иконка галочка ========
-											.okved-list__icon
-												svg.svg-down
-													use(href="./img/spriteSvg.svg#svg-down")
-					
-					
-					
-					
+								
+								//========= Подкатегории ОКВЭД ========
+								.livel_1-drop
+									//=== level 2 ========
+									ul.okved-sublist
+										li.okved-sublist__block
+											.okved-list__header.py-20
+												label.form-checkbox
+													input(type="checkbox" name="" )
+													span.fake-checkbox
+													span.okved-num 05
+												
+												.okved-list__text
+													.okved-name  Добыча угля
+													//====иконка галочка ========
+													.okved-list__icon
+														svg.svg-down
+															use(href="./img/spriteSvg.svg#svg-down")
+						
+									//=== level 2 ========
+									ul.okved-sublist
+										li.okved-sublist__block
+											.okved-list__header.py-20
+												label.form-checkbox
+													input(type="checkbox" name="" )
+													span.fake-checkbox
+													span.okved-num 06
+												
+												.okved-list__text
+													.okved-name  Добыча сырой нефти и природного газа
+													//====иконка галочка ========
+													.okved-list__icon
+														svg.svg-down
+															use(href="./img/spriteSvg.svg#svg-down")
+						
+									//=== level 2 ========
+									ul.okved-sublist
+										li.okved-sublist__block
+											.okved-list__header.py-20
+												label.form-checkbox
+													input(type="checkbox" name="" )
+													span.fake-checkbox
+													span.okved-num 07
+												
+												.okved-list__text
+													.okved-name  Добыча металлических руд
+													//====иконка галочка ========
+													.okved-list__icon
+														svg.svg-down
+															use(href="./img/spriteSvg.svg#svg-down")
 					
 					
 					
