--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -369,7 +369,7 @@
 								//========= Подкатегории ОКВЭД ========
 								.livel_1-drop
 									//=== level 2 ========
-									ul.okved-sublist
+									ul.okved-sublist.okved-sublist__level-2
 										li.okved-sublist__block
 											.okved-list__header.py-20
 												label.form-checkbox
@@ -385,9 +385,11 @@
 															use(href="./img/spriteSvg.svg#svg-down")
 						
 									//=== level 2 ========
-									ul.okved-sublist
+									ul.okved-sublist.okved-sublist__level-2
 										li.okved-sublist__block
 											.okved-list__header.py-20
+												
+												//=====checkbox======
 												label.form-checkbox
 													input(type="checkbox" name="" )
 													span.fake-checkbox
@@ -401,7 +403,7 @@
 															use(href="./img/spriteSvg.svg#svg-down")
 						
 									//=== level 2 ========
-									ul.okved-sublist
+									ul.okved-sublist.okved-sublist__level-2
 										li.okved-sublist__block
 											.okved-list__header.py-20
 												label.form-checkbox
