--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -247,9 +247,69 @@
 .calculator-page {margin-left: 10px;}
 
 .okved-modal{
-
-
-
+	padding-top: 40px;
+	padding-bottom: 40px;
+	height: 100vh;
+	.modal-frame{
+		width: 95%;
+		max-width: 1350px;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		&>*{width: 100%;}
+		background-color: #fff;
+		position: relative;
+		
+		@media (max-width: 767px) {
+		  width: 100%;
+		}
+	}
+	.okved-modal__header{
+		padding-top: 40px;
+		padding-bottom: 30px;
+		border-bottom: 1px solid $sec2;
+	}
+	.okved-modal__top{
+		justify-content: space-between;
+	}
+	.icon-close{
+		width: 20px;
+		height: 20px;
+		justify-content: center;
+		align-items: center;
+		background-size: cover;
+	}
+	.okved-modal__title{
+		.h2{
+			margin-bottom: 0;
+			padding-right: 40px;
+			@media (max-width: 767px) {
+			  font-size: 16px;
+			}
+		}
+		margin-bottom: 30px;
+	}
+	.okved-modal__body{
+		overflow: hidden;
+		overflow-y: auto;
+		height: calc(100% - 350px);
+		margin-bottom: 86px;
+		flex-grow: 1;
+	}
+	.okved-modal__footer{
+		box-shadow: 0px -4px 20px 0px rgba(169, 173, 198, 0.30);
+		padding-top: 30px;
+		padding-left: 40px;
+		padding-right: 40px;
+		padding-bottom: 40px;
+		position: absolute;
+		z-index: 2;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #fff;
+		border-radius: 0 0 20px 20px;
+	}
 }
 .py-30{
 	padding-top: 30px;
@@ -261,6 +321,7 @@
 	
 }
 .okved-list{
+
 	.form-checkbox{
 		flex-direction: column-reverse;
 		display: flex;
