--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -290,11 +290,35 @@
 		margin-bottom: 30px;
 	}
 	.okved-modal__body{
+		padding-right: 20px;
+	}
+	.scroll-wrapper{
 		overflow: hidden;
 		overflow-y: auto;
 		height: calc(100% - 350px);
 		margin-bottom: 86px;
 		flex-grow: 1;
+	    scrollbar-width: thin;
+		scrollbar-color: $sec2 transparent;
+
+		&::-webkit-scrollbar {
+			display: block;
+			width: 4px;
+			height: 20px;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			width: 4px;
+			height: 20px;
+			background-color: $sec2;
+			border-radius: 4px;
+		}
+
+		&::-webkit-scrollbar-track {
+			background-color: transparent;
+		}
+
+		
 	}
 	.okved-modal__footer{
 		box-shadow: 0px -4px 20px 0px rgba(169, 173, 198, 0.30);
